# OmniSupply-AI-Multi-Agent-Supply-Chain-Intelligence-Platform

./: .env.example  .gitignore  BOOLEAN_MIGRATION_SUMMARY.md  EMAIL_WORKFLOW_AGENT_ARCH.md  FINANCE_AGENT_EXECUTIVE_SUMMARY.md  FINANCE_ANALYSIS_INDEX.md  FINANCE_DATA_COLUMNS_REFERENCE.md  FINANCE_INSIGHT_AGENT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MEETING_REPORT_AGENT_ARCH.md  MIGRATION_COMPLETED.txt  MIGRATION_GUIDE.md  OPIK_FIX_SUMMARY.md  PIPELINE_AUTOMATION_UPDATE.md  QUICKSTART.md  README.md  SCHEMA_FIX_SUMMARY.md  SESSION_COMPLETION_SUMMARY.md  SUPPLY_CHAIN_RISK_AGENT_PLAN.md  TROUBLESHOOTING.md  cleanup_test_data.py  example_usage.py  load_full_data.py  migrate_is_returned_auto.py  migrate_is_returned_to_boolean.py  migrate_schema.py  omnisupply_demo.py  pyproject.toml  quick_demo_small_data.py  quickstart.py  requirements.txt  test_boolean_fix.py  test_data_pipeline.py  verify_boolean_aggregations.py
config/: settings.py
notebooks/: data_analyst_agent_build.ipynb  data_analyst_agent_enhanced.ipynb  research.ipynb
src/agents/: base.py  data_analyst.py  email_agent.py  finance_agent.py  meeting_agent.py  risk_agent.py
src/storage/sql/: database.py  models.py
src/storage/vector/: embeddings.py
src/supervisor/: orchestrator.py
