[project]
name = "omnisupply-ai-multi-agent-supply-chain-intelligence-platform"
version = "0.1.0"
description = "Multi-agent AI system for supply chain intelligence with LangGraph and Opik observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "duckdb>=1.0.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
    "langchain-openai>=0.3.0",
    "opik>=0.2.0",
    "chromadb>=0.6.0",
    "tiktoken>=0.9.0",
]
